# WSGi-http-server

./: .gitignore  README.md  pyproject.toml
wsgi_http_server/: flask_app.py  wsgi.py
