[tool.poetry]
name = "wsgi-http-server"
version = "0.1.0"
description = "Simple wsgi-http server for Python frameworks like a Flask ect."
authors = ["Alexander Seryakov"]
license = "MIT"
readme = "README.md"
packages = [{include = "wsgi_http_server"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
